zk-kafka-es-kibana部署/无安全认证/elasticsearch部署/kibana/kibana.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ems
  name: kibana
  labels:
    app: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      imagePullSecrets:
        - name: dockersecret
      containers:
        - name: kibana
          image: 197.6.2.10:5000/kibana:7.17.5
          ports:
            - containerPort: 5601
              name: webinterface
          volumeMounts:
            - name: config
              mountPath: /usr/share/kibana/config/kibana.yml
              readOnly: true
              subPath: kibana.yml
      volumes:
        - name: config
          configMap:
            name: kibana-config
