zk-kafka-es-kibana部署/无安全认证/elasticsearch部署/kibana/kibana.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ems
  name: kibana
  labels:
    app: kibana
spec:
  ports:
    - port: 5601
      name: webinterface
      nodePort: 5601
  type: NodePort
  selector:
    app: kibana
