zk-kafka-es-kibana部署/无安全认证/elasticsearch部署/kibana/kibana.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: ems
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kibana.crptest.com
      http:
        paths:
          - backend:
              serviceName: kibana
              servicePort: 5601
            path: /
